Fix HTTP status code order for offers API endpoints
- Implemented correct status code precedence: 401  403  404  400
- Added permission checks before data validation in OfferListCreateView.create()
- Added permission checks before object retrieval in OfferDetailView.update() and destroy()
- Enhanced get_object() method to check authentication before object existence
- Added IsBusinessUser permission to OfferDetailView for proper 403 responses
- Configured VS Code settings to suppress Pylance import warnings
- Updated .gitignore to exclude development tools and test files

All offer endpoints now return proper HTTP status codes as per REST API standards.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,8 @@ coverage.xml
 .hypothesis/
 .tox/
 .nox/
+marketplace_project_restored/
+ABGABE_DOKUMENTATION/
 
 # Test Files and Directories - INTENTIONALLY EXCLUDED
 tests/
